<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="CallBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="todday.funny.seoulcatcher.viewmodel.CallViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/white"
            android:clickable="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/btn_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:onClick="@{() -> model.close()}"
                    android:padding="16dp"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/call_catcher"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:foreground="?android:selectableItemBackground"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/call"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>


            <!--종류-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/kind"
                android:textColor="@color/gray_dark"
                android:textSize="12sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/btn_cardiac"
                    style="@style/RadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{(v)->model.onClickKind(v)}"
                    android:text="@string/cardiac_arrest" />

                <RadioButton
                    android:id="@+id/btn_fire"
                    style="@style/RadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{(v)->model.onClickKind(v)}"
                    android:text="@string/fire" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_light" />
            <!--연령-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="@{model.isCardiac?View.VISIBLE:View.GONE}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/age"
                    android:textColor="@color/gray_dark"
                    android:textSize="12sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        style="@style/RadioButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{(v)->model.onClickAge(v)}"
                        android:text="@string/children" />

                    <RadioButton
                        style="@style/RadioButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{(v)->model.onClickAge(v)}"
                        android:text="@string/general" />

                    <RadioButton
                        style="@style/RadioButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{(v)->model.onClickAge(v)}"
                        android:text="@string/old_age" />
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/gray_light" />
            </LinearLayout>

            <!--사고 위치-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->model.onClickLocation()}"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/accident_location"
                    android:textColor="@color/gray_dark"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:hint="@string/hint_location"
                            android:singleLine="true"
                            android:text="@{model.mCall.name}"
                            android:textColorHint="@color/gray_dark"
                            android:textSize="14sp" />

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:singleLine="true"
                            android:text="@{model.mCall.address}"
                            android:textColor="@color/gray_dark"
                            android:textColorHint="@color/gray_dark"
                            android:textSize="12sp"
                            android:visibility="@{model.isSelectLocation?View.VISIBLE:View.GONE}"
                            tools:visibility="gone" />
                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/gray_light" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{model.showLoading?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </android.support.constraint.ConstraintLayout>
</layout>